<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image_top_camera"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="@dimen/dimen_8"
            android:src="@drawable/despicable"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/brand_view"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="@dimen/dimen_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_top_camera">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/shopbackground">

                <TextView
                    android:id="@+id/txt_browse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/browse_by"
                    android:textColor="#ECE7E9"
                    android:textSize="@dimen/dimen_20"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.7"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_20"
                    android:background="#C5681B"
                    android:text="@string/brand"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.7"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_browse" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_l_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastest_arrivals"
            android:textSize="@dimen/dimen_20"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_8"
            app:layout_constraintTop_toBottomOf="@id/brand_view"
            app:layout_constraintLeft_toLeftOf="@id/brand_view"/>
        <Button
            android:id="@+id/btn_viewall"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_16"
            android:text="view all"
            android:layout_marginTop="@dimen/dimen_8"
            android:background="#F14040"
            app:layout_constraintTop_toBottomOf="@id/brand_view"
            app:layout_constraintRight_toRightOf="@id/brand_view"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_lastest_arrivals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_l_arrival"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_upload_picture"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="@dimen/dimen_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_lastest_arrivals">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/shopbackground">

                <TextView
                    android:id="@+id/txt_looking_for"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="15sp"
                    android:text="@string/upload"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dimen_20"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_upload_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:background="#C5681B"
                    android:text="UPLOAD PICTURE"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_looking_for" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose by Country"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_8"
            android:textSize="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@id/card_upload_picture"
            app:layout_constraintLeft_toLeftOf="@id/card_upload_picture"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_choose"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_need_help"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="@dimen/dimen_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_search_country">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/shopbackground">

                <TextView
                    android:id="@+id/txt_need_help"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15sp"
                    android:text="@string/need"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dimen_20"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_call_now"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:background="#C5681B"
                    android:text="CALL NOW"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_need_help" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_popular_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textSize="@dimen/dimen_20"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/card_need_help"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_popular_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_popular_products"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>